# AkiDemo

./: oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: oh-package-lock.json5  oh-package.json5
entry/src/main/cpp/: CMakeLists.txt  TestRunner.cpp  hello.cpp  mod.cpp  test-aki.cpp  test-aki.h  test-napi.cpp  test-napi.h  test.cpp
entry/src/main/cpp/types/libentry/: index.d.ts
entry/src/main/ets/pages/: Index.ets
